--- a/preston-4.html
+++ b/preston-4.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width">
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/weatherSites.css" rel="stylesheet">
+        <link href="styles/medium.css" rel="stylesheet">
+        <link href="styles/large.css" rel="stylesheet">
         <title>Naomi's Site</title>
         <meta name="description" content="Website Project for BYUI CIT230 Class">
         <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
